examples/c/error-codes/undefined/UB-CDT2-bad-static.output
UB-CDT2-bad-static.c:3:1: warning: empty union is a GNU extension [-Wgnu-empty-struct]
union e {
^
UB-CDT2-bad-static.c:19:11: warning: expression result unused [-Wunused-value]
      s.z.u2;
      ~~~ ^~
UB-CDT2-bad-static.c:20:11: warning: expression result unused [-Wunused-value]
      s.z.u1;
      ~~~ ^~
3 warnings generated.
UB-CDT2-bad-static.c:3:7: error: Unions must contain a named member.

    Undefined behavior (UB-CDT2):
        see C11 section 6.7.2.1 http://rvdoc.org/C11/6.7.2.1
        see C11 section J.2:1 item 61 http://rvdoc.org/C11/J.2
        see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
        see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1

